sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: value getValeur is not a member of Int
      if (getValeur(j)getValeur(j+1)){
                      ^