sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n=getNombreValeurs()
  var count= -1
  while (count != 0){
    count=0
    for (j <- 0 to n-2 ){
      if (getValeur(j)getValeur(j+1)){
        echange(j,j+1)
        count=count+1
      }
    }
  } 
}
